Fix styling of scrollbar in user status sidenav

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -939,7 +939,14 @@ a.github-fork {
 		padding-top: 15px;
 		width: @rooms-box-width;
 		overflow-x: hidden;
-		overflow-y: scroll;
+		overflow-y: auto;
+		-webkit-overflow-scrolling: touch;
+		.custom-scroll(transparent,
+		rgba(255,
+		255,
+		255,
+		0.05));
+		direction: rtl;
 		.calc(height,
 		~'100% - ' @header-min-height + @footer-min-height);
 		.transition(transform .3s cubic-bezier(.5,
@@ -948,6 +955,9 @@ a.github-fork {
 		1));
 		&._hidden {
 			.transform(translateX(-100%));
+		}
+		> .wrapper {
+			direction: ltr;
 		}
 		.status {
 			padding-left: 38px;
